# EqLink

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yaml
lib/eqlink/: __init__.py  connecter.py
lib/eqlink/analytics/: __init__.py  api.py  compound.py  core.py  rti.py  tablebuilders.py
lib/eqlink/utilities/: __init__.py  constructors.py  general.py  parsers.py
test/: test_connector.py
test/test_analytics/: test_compound.py  test_core.py  test_rti.py  test_tablebuilders.py
