[metadata]
name = eqlink
description = An API wrapper to easily access JobsEQ data, forcasts, and tools.
author = Joseph Douglas York
license = MIT
license_files = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    eqlink
    eqlink.analytics
    eqlink.utilities
install_requires =
    requests >= 2
    pandas >= 1.4.0
package_dir =
    =lib
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
eqlink = py.typed

[flake8]
max-line-length = 88

[mypy]
implicit_reexport = False
